# agentcore

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  wheels.yml
agentcore/adapters/common/: http_transport.cpp
agentcore/adapters/models/: gemini_generate_content_model_adapter.cpp  grok_chat_model_adapter.cpp  llm_http_adapter.cpp  local_model_adapter.cpp  openai_chat_model_adapter.cpp
agentcore/adapters/tools/: http_json_tool.cpp  http_tool.cpp  sqlite_tool.cpp
agentcore/benchmarks/: persistent_subgraph_session_benchmark.cpp  runtime_benchmark.cpp
agentcore/examples/: knowledge_graph_workflow.cpp  planner_executor_graph.cpp  retrieval_graph.cpp  runtime_proof_suite.cpp
agentcore/include/agentcore/adapters/: adapter_factories.h
agentcore/include/agentcore/adapters/common/: adapter_metadata.h  http_transport.h
agentcore/include/agentcore/core/: types.h
agentcore/include/agentcore/execution/: checkpoint.h  engine.h  proof.h
agentcore/include/agentcore/execution/reactive/: memoization.h
agentcore/include/agentcore/execution/streaming/: public_stream.h
agentcore/include/agentcore/execution/subgraph/: session_runtime.h  subgraph_runtime.h
agentcore/include/agentcore/execution/subgraph/inline/: runner.h
agentcore/include/agentcore/execution/subgraph/reuse/: engine_pool.h
agentcore/include/agentcore/graph/: graph_ir.h
agentcore/include/agentcore/graph/composition/: subgraph.h
agentcore/include/agentcore/runtime/: async_executor.h  model_api.h  node_runtime.h  scheduler.h  tool_api.h
agentcore/include/agentcore/state/: knowledge_graph.h  state_store.h
agentcore/include/agentcore/state/context/: context_graph.h
agentcore/include/agentcore/state/intelligence/: model.h  ops.h
agentcore/include/agentcore/state/journal/: task_journal.h
agentcore/src/bindings/python/core/: bridge.cpp  bridge.h
agentcore/src/bindings/python/module/: module.cpp
agentcore/src/execution/: checkpoint.cpp  engine.cpp  proof.cpp  trace.cpp
agentcore/src/execution/reactive/: memoization.cpp
agentcore/src/execution/streaming/: public_stream.cpp
agentcore/src/execution/subgraph/: session_runtime.cpp  subgraph_runtime.cpp
agentcore/src/execution/subgraph/inline/: runner.cpp
agentcore/src/execution/subgraph/reuse/: engine_pool.cpp
agentcore/src/graph/: graph_ir.cpp
agentcore/src/graph/composition/: subgraph.cpp
agentcore/src/runtime/: async_executor.cpp  model_registry.cpp  scheduler.cpp  tool_registry.cpp
agentcore/src/state/: knowledge_graph.cpp  state_store.cpp
agentcore/src/state/context/: context_graph.cpp
agentcore/src/state/intelligence/: model.cpp  ops.cpp
agentcore/src/state/journal/: task_journal.cpp
agentcore/tests/: adapter_tests.cpp  control_flow_tests.cpp  execution_module_tests.cpp  graph_tests.cpp  runtime_module_tests.cpp  runtime_tests.cpp  state_tests.cpp  subgraph_session_tests.cpp
cmake/: agentcoreConfig.cmake.in
docs/: README.md
docs/comparisons/: langgraph-head-to-head.md
docs/concepts/: design-lineage.md  runtime-model.md
docs/integrations/: graph-stores.md  mcp.md  opentelemetry.md
docs/migration/: langgraph-to-agentcore.md
docs/operations/: validation.md
docs/quickstarts/: cpp.md  python.md
docs/reference/: api.md
packaging/smoke_consumer/: CMakeLists.txt  main.cpp
python/agentcore/: __init__.py  _context_graph.py  context.py
python/agentcore/adapters/: __init__.py  registry.py
python/agentcore/graph/: __init__.py  state.py
python/agentcore/graphstores/: __init__.py  base.py  memory.py  neo4j.py  registry.py  types.py
python/agentcore/mcp/: __init__.py  client.py  launcher.py  protocol.py  server.py
python/agentcore/observability/: __init__.py  otel.py
python/agentcore/patterns/: __init__.py  pipeline.py  specialists.py
python/agentcore/prompts/: __init__.py  templates.py
python/agentcore_langgraph_native/: __init__.py
python/agentcore_langgraph_native/langgraph_compat/: __init__.py  state_graph.py
python/benchmarks/: langgraph_head_to_head.py  massive_fanout_benchmark.py  state_graph_api_benchmark.py
python/langgraph/: __init__.py  types.py
python/langgraph/graph/: __init__.py  message.py
python/tests/: adapters_runtime_smoke.py  agent_workflows_smoke.py  context_state_smoke.py  graph_store_pipeline_test.py  mcp_launcher_smoke.py  mcp_runtime_smoke.py  neo4j_graph_store_integration_test.py  opentelemetry_smoke.py  patterns_smoke.py  real_world_pipeline_test.py  state_graph_api_smoke.py
python/tests/fixtures/: mcp_installable_server.py  mcp_stdio_server.py
