[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "agentcore-graph"
version = "0.1.3"
description = "Native agent-graph runtime with C++ execution, explicit state patches, resumable checkpoints, and Python bindings."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Michael Avina" }
]
keywords = ["agents", "graphs", "workflows", "runtime", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mavin2009/agentcore"
Documentation = "https://github.com/mavin2009/agentcore/tree/main/docs"
Repository = "https://github.com/mavin2009/agentcore"
Issues = "https://github.com/mavin2009/agentcore/issues"

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
wheel.packages = ["python/agentcore", "python/agentcore_langgraph_native"]
wheel.license-files = ["LICENSE", "NOTICE"]
cmake.args = [
  "-DCMAKE_CXX_COMPILER=c++",
  "-DAGENTCORE_BUILD_PYTHON_BINDINGS=ON",
  "-DAGENTCORE_BUILD_EXAMPLES=OFF",
  "-DAGENTCORE_BUILD_BENCHMARKS=OFF",
  "-DBUILD_TESTING=OFF",
]
sdist.include = [
  "CMakeLists.txt",
  "LICENSE",
  "NOTICE",
  "README.md",
  "cmake/**",
  "agentcore/**",
  "python/**",
]
sdist.exclude = [
  "build/**",
  "dist/**",
  "python/**/__pycache__/**",
  "python/**/*.pyc",
]

[tool.cibuildwheel]
build = "cp39-manylinux_x86_64 cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64"
build-verbosity = 1
test-command = "python {project}/python/tests/state_graph_api_smoke.py && python {project}/python/tests/agent_workflows_smoke.py && python {project}/python/tests/patterns_smoke.py && python {project}/python/tests/adapters_runtime_smoke.py"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
